--- a/index.html
+++ b/index.html
@@ -239,7 +239,34 @@
     </main>
 
    
-    <footer>
+    <footer id="contacto">
+      <div class="bg-black text-secondary px-4 py-5 text-center">
+        <div class="py-5">
+  
+          <i id="icono-footer" class="bi bi-code"></i>
+  
+          <div class="col-lg-6 mx-auto">
+            <p class="fs-5 mb-4">Programar sin limites de imaginación y sin una meta fija llegando lo más lejos posible.</p>
+            
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <a href="https://github.com/SusanaPc21" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github icono-contacto"></i>
+              </a>
+              <a href="https://www.instagram.com/susana.pa21?igsh=MWNtbDNsaWdtMGhnbA==" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-instagram icono-contacto"></i>
+              </a>
+              <a href="susanlore08@gmail.com" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-envelope icono-contacto"></i>
+              </a>
+            </div>
+  
+  
+          </div>
+  
+  
+        </div>
+        <h6 id="derechos-de-autor">Susana Pacheco Ortiz (2024) - Technolochicas PRO</h6>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
